--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/genai": "^1.41.0",
     "@supabase/supabase-js": "^2.97.0",
     "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
     "lucide-react": "^0.574.0",
     "react": "^19.2.4",
     "react-datepicker": "^9.1.0",
